cmake_minimum_required(VERSION 3.14)
project(my_project)

include(CTest)

function(test target_name)
    add_executable("${target_name}" "${ARGN}")
    add_test(NAME "${target_name}" COMMAND "${target_name}")
endfunction()

test(t1 t1.c)
test(t1000 t1000.c)

test(f1 files/f1.c)
test(f2 files/f2.c)
test(f3 files/f3.c)
test(f4 files/f4.c)
test(f5 files/f5.c)
test(f6 files/f6.c)
test(f7 files/f7.c)
test(f8 files/f8.c)
test(f9 files/f9.c)
test(f10 files/f10.c)
test(f11 files/f11.c)
test(f12 files/f12.c)
test(f13 files/f13.c)
test(f14 files/f14.c)
test(f15 files/f15.c)
test(f16 files/f16.c)
test(f17 files/f17.c)
test(f18 files/f18.c)
test(f19 files/f19.c)
test(f20 files/f20.c)
test(f21 files/f21.c)
test(f22 files/f22.c)
test(f23 files/f23.c)
test(f24 files/f24.c)
test(f25 files/f25.c)
test(f26 files/f26.c)
test(f27 files/f27.c)
test(f28 files/f28.c)
test(f29 files/f29.c)
test(f30 files/f30.c)
test(f31 files/f31.c)
test(f32 files/f32.c)
test(f33 files/f33.c)
test(f34 files/f34.c)
test(f35 files/f35.c)
test(f36 files/f36.c)
test(f37 files/f37.c)
test(f38 files/f38.c)
test(f39 files/f39.c)
test(f40 files/f40.c)
test(f41 files/f41.c)
test(f42 files/f42.c)
test(f43 files/f43.c)
test(f44 files/f44.c)
test(f45 files/f45.c)
test(f46 files/f46.c)
test(f47 files/f47.c)
test(f48 files/f48.c)
test(f49 files/f49.c)
test(f50 files/f50.c)
test(f51 files/f51.c)
test(f52 files/f52.c)
test(f53 files/f53.c)
test(f54 files/f54.c)
test(f55 files/f55.c)
test(f56 files/f56.c)
test(f57 files/f57.c)
test(f58 files/f58.c)
test(f59 files/f59.c)
test(f60 files/f60.c)
test(f61 files/f61.c)
test(f62 files/f62.c)
test(f63 files/f63.c)
test(f64 files/f64.c)
test(f65 files/f65.c)
test(f66 files/f66.c)
test(f67 files/f67.c)
test(f68 files/f68.c)
test(f69 files/f69.c)
test(f70 files/f70.c)
test(f71 files/f71.c)
test(f72 files/f72.c)
test(f73 files/f73.c)
test(f74 files/f74.c)
test(f75 files/f75.c)
test(f76 files/f76.c)
test(f77 files/f77.c)
test(f78 files/f78.c)
test(f79 files/f79.c)
test(f80 files/f80.c)
test(f81 files/f81.c)
test(f82 files/f82.c)
test(f83 files/f83.c)
test(f84 files/f84.c)
test(f85 files/f85.c)
test(f86 files/f86.c)
test(f87 files/f87.c)
test(f88 files/f88.c)
test(f89 files/f89.c)
test(f90 files/f90.c)
test(f91 files/f91.c)
test(f92 files/f92.c)
test(f93 files/f93.c)
test(f94 files/f94.c)
test(f95 files/f95.c)
test(f96 files/f96.c)
test(f97 files/f97.c)
test(f98 files/f98.c)
test(f99 files/f99.c)
test(f100 files/f100.c)
